--- a/snippets/navbar-desktop-menu.liquid
+++ b/snippets/navbar-desktop-menu.liquid
@@ -9,16 +9,16 @@
           {{ link.title }}
         </a>
       {% else %}
-        <a 
-          class="nav-link dropdown-toggle {% if link.child_active %}active{% endif %}" 
+        <a
+          class="nav-link dropdown-toggle {% if link.child_active %}active{% endif %}"
           href="#"
-          data-bs-toggle="dropdown" 
-          data-bs-display="static"
+          data-bs-toggle="dropdown"
+          data-bs-auto-close="true"
           aria-expanded="false"
           role="button">
           {{ link.title }}
         </a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-menu-end">
           {% for child_link in link.links %}
             <li>
               {% if child_link.title == '-' %}
