--- a/snippets/styles-scripts.liquid
+++ b/snippets/styles-scripts.liquid
@@ -67,8 +67,14 @@
 <link href="{{ 'collection.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'product.css' | asset_url }}" rel="stylesheet">
 
-{% comment %} 
-  Scripts 
+{% comment %}
+  Custom Styles
+{% endcomment %}
+<link href="{{ 'custom-product-cards.css' | asset_url }}" rel="stylesheet">
+<link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
+
+{% comment %}
+  Scripts
 {% endcomment %}
 <script src="{{ 'base.js' | asset_url }}" defer></script>
 <script src="{{ 'sections.js' | asset_url }}" defer></script>
