--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -98,7 +98,7 @@
               {% render 'navbar-logo', block: block %}
             </div>
             <div class="col-10">
-              {% render 'navbar-desktop-menu', block: block %}
+              {% render 'navbar-desktop-menu-full', block: block %}
             </div>
             <div class="col-4">
               {% render 'navbar-desktop-icons', block: block %}
