--- a/snippets/styles-scripts.liquid
+++ b/snippets/styles-scripts.liquid
@@ -71,6 +71,7 @@
   Custom Styles
 {% endcomment %}
 <link href="{{ 'custom-product-cards.css' | asset_url }}" rel="stylesheet">
+<link href="{{ 'custom-mega-menu.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
 
 {% comment %}
