--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -38,7 +38,7 @@
     {{ 'general.accessibility.skip_content' | t }}
   </a>
   
-  <div id="header-group" class="sticky-top">
+  <div id="header-group">
     {% sections 'header-group' %}
   </div>
 
