--- a/snippets/styles-scripts.liquid
+++ b/snippets/styles-scripts.liquid
@@ -70,8 +70,8 @@
 {% comment %}
   Custom Styles
 {% endcomment %}
+<link href="{{ 'custom-navbar.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom-product-cards.css' | asset_url }}" rel="stylesheet">
-<link href="{{ 'custom-mega-menu.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
 
 {% comment %}
