--- a/snippets/styles-scripts.liquid
+++ b/snippets/styles-scripts.liquid
@@ -70,7 +70,7 @@
 {% comment %}
   Custom Styles
 {% endcomment %}
-<link href="{{ 'custom-navbar.css' | asset_url }}" rel="stylesheet">
+<link href="{{ 'navbar-lavender.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom-product-cards.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
 
