--- a/snippets/styles-scripts.liquid
+++ b/snippets/styles-scripts.liquid
@@ -72,6 +72,7 @@
 {% endcomment %}
 <link href="{{ 'navbar-lavender.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom-product-cards.css' | asset_url }}" rel="stylesheet">
+<link href="{{ 'exciting-captions.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
 
 {% comment %}
