--- a/assets/custom.css
+++ b/assets/custom.css
@@ -15,13 +15,14 @@ body {
   min-height: 100vh;
 }
 
-/* Desktop margins - 7% on each side */
+/* Desktop margins - 7% on each side for product sections only */
 @media (min-width: 992px) {
-  #header-group,
-  #main,
-  #footer-group {
-    margin-left: 7% !important;
-    margin-right: 7% !important;
+  .featured-products .container,
+  .collection-products .container,
+  section[id*="featured"] .container,
+  section[class*="product"] .container {
+    padding-left: calc(var(--bs-gutter-x, 0.75rem) + 7%) !important;
+    padding-right: calc(var(--bs-gutter-x, 0.75rem) + 7%) !important;
   }
 }
 
